welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:13: error: type mismatch;
 found   : Unit
 required: Int
		n=n+1;
                 ^countTeen:12: error: type mismatch;
 found   : Unit
 required: Int
	if(d>=13 && 19>=d){
        ^