welcome.lessons.welcome.bat.bool1.CountTeen.scala.code
def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {
	var n=0;
	if(a>=13 && 19>=a){
		n=n+1;
	}
	if(b>=13 && 19>=b){
		n=n+1;
	}
	if(c>=13 && 19>=c){
		n=n+1;
	}
	if(d>=13 && 19>=d){
		n=n+1;
	}
}
